rust/macros/tests/ui/fail/string_literal_protocol.stderr
error: string-literal tell input was removed; use the canonical indentation-based token DSL directly
 --> tests/ui/fail/string_literal_protocol.rs:3:7
  |
3 |   tell!(r#"
  |  _______^
4 | | protocol PingPong =
5 | |   roles Alice, Bob
6 | |   Alice -> Bob : Ping
7 | |   Bob -> Alice : Pong
8 | | "#);
  | |__^
